--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -2,24 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-<!--    <title th:text="${title}"></title>-->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/option-styles.css}"/>
+    <link rel="stylesheet" href="/css/closed-source/header-styles.css">
+    <script th:src="@{/javascript/closed-source/option_logic.js}" defer></script>
 </head>
-<script>
-    fetch(`/api/v1/client/options/autogenerate`, {
-        method: 'GET',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-    })
-        .then(response => response.json())
-        .then(data => {
-            console.log(data);
-        })
-        .catch((error) => {
-            console.error('Ошибка:', error);
-        });
-</script>
+
 <body>
+
+<div th:insert="~{header :: header}"></div>
+<div class="timer-block">
+    <div style="display: flex; align-items: center;">
+        <div id="timer">
+        </div>
+        <div id="start">
+            <svg id="pause-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28">
+                <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/>
+            </svg>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
