--- a/src/main/resources/static/css/closed-source/theory-styles.css
+++ b/src/main/resources/static/css/closed-source/theory-styles.css
@@ -1,4 +1,5 @@
 table {
+    position: relative;
     color: #f5f5f5bf;
     width: 100%;
     border-collapse: collapse;
@@ -6,8 +7,12 @@ table {
     font-family: 'Helvetica', sans-serif;
 }
 th, td {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     font-weight: normal;
+}
+th{
+    padding: 20px;
 }
 td{
     text-align: left;
@@ -28,8 +33,9 @@ tr:last-child{
 }
 
 .table-wrapper{
+    /*position: relative;*/
     background-color: #121212;
-    border: 1px solid #f5f5f5bf;
+    /*border: 1px solid #f5f5f5bf;*/
     overflow: hidden;
     border-radius: 20px;
     width: 55%;
@@ -134,4 +140,27 @@ tbody, thead, tr, td, th{
     font-size: 18px;
     font-family: 'Helvetica', sans-serif;
     color: #f5f5f5bf;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+
+.plus{
+    background-color: #119d11;
+    padding: 15px;
+    border-radius: 30%;
+}
+.plus:hover{
+    cursor: pointer;
+}
+.plus-wrapper{
+    position: absolute;
+    bottom: 0;
+    left: 85%;
+    z-index: 4;
+}
+
+.context{
+    position: relative;
 }
