--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <script defer th:src="@{/javascript/closed-source/theory_logic.js}"></script>
+<script th:if="${isGod}" defer th:src="@{/javascript/closed-source/theory_modify_logic.js}"></script>
 <div th:insert="~{header :: header}"></div>
 
 <div id="particles-js"></div>
@@ -17,25 +18,37 @@
 <script th:src="@{/javascript/open-source/particles-lib/design-settings/calm_dark_design.js}"></script>
 <div class="wrapper">
     <div>
-        <table class="table-wrapper" th:each="m : ${moduleList}">
-            <thead>
-            <tr class="header" th:id="'task_' + ${m.id}">
-                <th>Задание №<span th:text="${m.id}"></span></th>
-            </tr>
-            </thead>
-            <tbody th:each="section : ${m.sections}">
-            <tr class="section">
-                <td>
-                    <a class="link" target="_blank" th:href="${section.link}">
-                        <span th:text="${section.name}"></span>
-                        <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30" height="20">
-                            <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
-                        </svg>
-                    </a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div th:each="m : ${moduleList}" class="context">
+            <span th:if="${isGod}" class="plus-wrapper">
+                <svg  class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30"
+                      height="30">
+                    <path d="M 0 15 L 30 15 M 15 0 L 15 30" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                </svg>
+            </span>
+            <div class="table-wrapper" >
+                <table>
+                    <thead>
+                    <tr class="header" th:id="'task_' + ${m.id}">
+                        <th>Задание №<span th:text="${m.id}"></span></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="section : ${m.sections}" class="section">
+                        <td>
+                            <a class="link" target="_blank" th:href="${section.link}">
+                                <span th:text="${section.name}"></span>
+                                <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30"
+                                     height="20">
+                                    <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 </div>
 <div class="navigation-panel">
